fix: update toString